// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell.List basis 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="xrk-cell xrk-f xrk-ac"
    >
      <div
        class="xrk-cell-label"
      >
        限时奖励
      </div>
      <div
        class="xrk-cell-value"
      >
        <span
          class="taro-text xrk-cell-placeholder"
        />
      </div>
      <div
        class="xrk-cell-suffix xrk-f xrk-ac"
      />
    </div>
    <div
      class="xrk-cell xrk-f xrk-ac"
    >
      <div
        class="xrk-cell-label"
      >
        送葵花籽
      </div>
      <div
        class="xrk-cell-value"
      >
        <span
          class="taro-text xrk-cell-placeholder"
        />
      </div>
      <div
        class="xrk-cell-suffix xrk-f xrk-ac"
      />
    </div>
  </div>
</div>
`;

exports[`Cell.List line 1`] = `
<div>
  <div
    class="xrk-cell-list-line"
  >
    <div
      class="xrk-cell xrk-f xrk-ac"
    >
      <div
        class="xrk-cell-label"
      >
        限时奖励
      </div>
      <div
        class="xrk-cell-value"
      >
        <span
          class="taro-text xrk-cell-placeholder"
        />
      </div>
      <div
        class="xrk-cell-suffix xrk-f xrk-ac"
      />
    </div>
    <div
      class="xrk-cell xrk-f xrk-ac"
    >
      <div
        class="xrk-cell-label"
      >
        送葵花籽
      </div>
      <div
        class="xrk-cell-value"
      >
        <span
          class="taro-text xrk-cell-placeholder"
        />
      </div>
      <div
        class="xrk-cell-suffix xrk-f xrk-ac"
      />
    </div>
  </div>
</div>
`;
